--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
   <Head>
     <Meta Http-Equiv="X-UA-Compatible" Content="IE=Edge">
     <Meta Name="Viewport" Content="Width=Device-Width, Initial-Scale=1.0">
-    <Link Rel="Stylesheet" Href="./style.Css">
+    <Link Rel="Stylesheet" Href="./style.css">
     <Link Rel="Preconnect" Href="Https://Fonts.Googleapis.Com">
     <Link Rel="Preconnect" Href="Https://Fonts.Gstatic.Com" Crossorigin>
     <Link Rel="Preconnect" Href="Https://Fonts.Googleapis.Com">
