--- a/portfolio.html
+++ b/portfolio.html
@@ -1,17 +1,18 @@
-<!DOCTYPE Html>
-<Html Lang="En">
-  <Head>
-    <Meta Http-Equiv="X-UA-Compatible" Content="IE=Edge">
-    <Meta Name="Viewport" Content="Width=Device-Width, Initial-Scale=1.0">
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta http-Equiv="X-UA-Compatible" content="IE=Edge">
+    <meta name="Viewport" Content="Width=Device-Width, Initial-Scale=1.0">
     <Link Rel="Stylesheet" Href="./style.css">
     <Link Rel="Preconnect" Href="Https://Fonts.Googleapis.Com">
     <Link Rel="Preconnect" Href="Https://Fonts.Gstatic.Com" Crossorigin>
     <Link Rel="Preconnect" Href="Https://Fonts.Googleapis.Com">
     <Link Rel="Preconnect" Href="Https://Fonts.Gstatic.Com" Crossorigin>
-    <Link Href="Https://Fonts.Googleapis.Com/Css2?Family=Lato:wght@100;400;700&Family=Poppins:wght@200&Display=Swap" Rel="Stylesheet">
-    <Link Href="Https://Fonts.Googleapis.Com/Css2?Family=Poppins:wght@200&Display=Swap" Rel="Stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
      <Title>Portfolio</Title>
-  </Head>
+  </head>
 
  <Body>  
     <Header>  
